--- a/Play.Infra/docker-compose.yml
+++ b/Play.Infra/docker-compose.yml
@@ -1,5 +1,3 @@
-# docker run -d --rm --name mongo -p 27017:27017 -v mongodbdata:/data/db mongo
-
 version: "3.8"
 services: 
   mongo:
@@ -10,5 +8,16 @@ services:
     volumes:
       - mongodbdata:/data/db
 
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: rabbitmq
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - rabbitmqdata:/var/lib/rabbitmq
+    hostname: rabbitmq
+
 volumes:
   mongodbdata:
+  rabbitmqdata: 
